Add main bio page

--- a/views/bio.html
+++ b/views/bio.html
@@ -7,5 +7,20 @@
             </div>
         </div>
     </section>
-    <section id="stuff" style="width: 100%; height: 50vh"></section>
+    <section id="members">
+        <div class="row">
+            <a href="#/bio/rob" class="col-xs-3 profile" id="rob">
+                <span class="name">Rob</span>
+            </a>
+            <a href="#/bio/leo" class="col-xs-3 profile" id="leo">
+                <span class="name">Leo</span>
+            </a>
+            <a href="#/bio/marius" class="col-xs-3 profile" id="marius">
+                <span class="name">Marius</span>
+            </a>
+            <a href="#/bio/dennis" class="col-xs-3 profile" id="dennis">
+                <span class="name">Dennis</span>
+            </a>
+        </div>
+    </section>
 </div>
