--- a/css/bio.css
+++ b/css/bio.css
@@ -1,9 +1,20 @@
+#members {
+    position: relative;
+    height: 470px;
+    background-color: black;
+}
+
 #members .profile {
-    height: 400px;
+    cursor: pointer;
+    z-index: 2;
+    height: 100%;
+    width: 25%;
+    position: absolute;
     background-size: cover;
     background-position: center top;
     color :#bbb;
     transition: .2s ease-in;
+    top: 0;
 }
 #members .profile:hover {
     color :#fff;
@@ -23,18 +34,72 @@
     border-bottom: 0.12rem solid;
 }
 
+#members .profile-details {
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    color: #eee;
+    position: relative;
+}
+
+#members .profile-details .container {
+    padding: 10px 20px;
+    position: absolute;
+    width: 75%;
+    height: 100%;
+    left: 25%;
+    top: 0;
+}
+
+#members .profile-details .back-button {
+    position: absolute;
+    bottom: 0;
+    left: 10px;
+    color: #eee;
+    cursor: pointer;
+}
+
+#members .profile-details .profile-detail {
+    background-color: rgba(0, 0, 0, 0.85);
+    padding: 10px;
+    margin: 10px;
+    border-radius: 3px 3px 3px 3px;
+}
+
+#members .profile-details .profile-detail .profile-detail-key {
+    display: table-cell;
+    float: left;
+    text-align: right;
+    padding-right: 15px;
+    width: 120px;
+    font-size: 0.8em;
+    line-height: 1.8em;
+}
+
+#members .profile-details .profile-detail .profile-detail-value {
+    display: table-cell;
+}
+
 #members .profile#rob {
     background-image: url('../images/rob_profile.jpg');
+    left: 0;
 }
 
 #members .profile#leo {
     background-image: url('../images/leo_profile.jpg');
+    left: 25%;
 }
 
 #members .profile#marius {
     background-image: url('../images/marius_profile.jpg');
+    left: 50%;
 }
 
 #members .profile#dennis {
     background-image: url('../images/dennis_profile.jpg');
+    left: 75%;
+}
+
+#members .profile.active {
+    left: 0!important;
 }
